# Binance-Super-Smart-Chain

./: .gitignore  ADD_DNS_RECORD_GUIDE.md  ADD_TO_METAMASK.md  BEGINNER_GUIDE.md  BLOCKCHAIN_TESTING_GUIDE.md  BSC_EVM_IMPLEMENTATION.md  BSSC_LIVE_WEBSITE_DEPLOYMENT.md  BSSC_TESTNET_GUIDE.md  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_PUBLIC_TESTNET.md  DNS_SETUP_BSSC_LIVE.md  DNS_SETUP_INSTRUCTIONS.md  DOWNLOAD_OPENSSL_GUIDE.md  EASY_SOLUTION.md  ETH_BRIDGE_PDA_DEPLOYMENT.md  EVM_IMPLEMENTATION_COMPLETE.md  EXPLORER_DEPLOYMENT.md  EXPLORER_IMPROVEMENTS.md  FAUCET_FIX_README.md  GITHUB_READY_REPORT.md  INSTALL_OPENSSL.md  MAINNET_IMPLEMENTATION_PLAN.md  MAINNET_PROGRESS.md  MAINNET_QUICKSTART.md  METAMASK_INTEGRATION.md  PRE_DEPLOYMENT_CHECKLIST.md  PUSH_SUMMARY.md  QUICK_START.md  QUICK_TESTNET_DEPLOY.md  README.md  README_TESTING.md  REALITY_CHECK.md  REAL_ONLY_COMPLETE.md  REAL_RPC_SERVER_SUMMARY.md  REPLIT_DEPLOYMENT_GUIDE.md  RPC_NODE_SETUP.md  RUN_LOCALLY_GUIDE.md  SERVER_UPDATE_GUIDE.md  START_HERE.md  (+101 more)
.github/workflows/: build.yml  pages.yml
accounts-db/: build.rs
bsc-bridge/: Cargo.toml
bsc-bridge/src/: lib.rs
bssc-live-website/: index.html  index.txt
bssc-live-website/404/: index.html
bssc-live-website/_next/static/chunks/: 363-9e6a83e619dcf6a1.js  main-app-6f4279f9601c7c76.js  (+1 more)
bssc-validator-deploy/: Cargo.toml
bssc-validator-deploy/genesis/src/: genesis_accounts.rs
bssc-validator-deploy/programs/bsc-evm/: Cargo.toml
bssc-validator-deploy/programs/bsc-evm/src/: gas_optimization.rs  lib.rs  security.rs
bssc-validator-deploy/sdk/program/: build.rs
bssc-validator-deploy/version/src/: lib.rs
cli/: Cargo.toml
cli/src/: clap_app.rs  cli.rs  program.rs
multinode-demo/: setup.sh
programs/bsc-evm/: Cargo.toml  README.md
programs/bsc-evm/src/: evm_interpreter.rs  lib.rs  performance_monitoring.rs
programs/bsc-evm/tests/: evm_test.rs
programs/eth-bridge/: Cargo.toml
programs/eth-bridge/src/: instruction.rs  lib.rs
rpc-bsc-evm/: Cargo.toml
rpc-bsc-evm/src/: lib.rs
scripts/: run.sh
sdk/program/src/: native_token.rs
tokens/src/: token_display.rs
validator/src/: dashboard.rs
vote/: build.rs
website/: .replit  .replitignore  DEPLOYMENT.md  README.md  README_GITHUB_PAGES.md  README_REPLIT.md  next.config.js  package-lock.json  package.json  tailwind.config.js
website/.github/workflows/: deploy.yml
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: DeveloperTools.tsx  Features.tsx  Footer.tsx  GettingStarted.tsx  Hero.tsx  LiveTestnet.tsx  Navigation.tsx  PerformanceComparison.tsx  TechArchitecture.tsx
(+3 files in other folders)
