[package]
name = "rpc-bsc-evm"
version = "2.0.0"
authors = ["Binance Super Smart Chain Maintainers <maintainers@binance.com>"]
description = "BSC EVM RPC Interface for Solana"
license = "Apache-2.0"
repository = "https://github.com/HaidarIDK/Binance-Super-Smart-Chain"
homepage = "https://bssc.binance.org/"
edition = "2021"

[dependencies]
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
